# tripleo-ipsec

./: .gitignore  .gitreview  .zuul.yaml  README.md  README.rst  deploy-ipsec-tripleo.yml  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yml
files/: ipsec-resource-agent.sh
handlers/: main.yml
meta/: main.yml
roles/ipsec-setup/: README.md
roles/ipsec-setup/tasks/: firewall.yml  main.yml
roles/ipsec-setup/tests/: test.yml
roles/ipsec-start-tunnels/: README.md
roles/ipsec-start-tunnels/defaults/: main.yml
roles/ipsec-start-tunnels/tasks/: main.yml
roles/ipsec-start-tunnels/tests/: test.yml
roles/overcloud-ipsec-setup/: README.md
roles/overcloud-ipsec-setup/defaults/: main.yml
roles/overcloud-ipsec-setup/files/: ipsec-resource-agent.sh
roles/overcloud-ipsec-setup/handlers/: main.yml
roles/overcloud-ipsec-setup/tasks/: firewall.yml  ipsec-conf.yml  (+3 more)
tasks/: firewall.yml  hardcoded-network-discover.yml  init-connections.yml  inventory-network-discover.yml  ipsec-conf.yml  ipsec.yml  legacy-ipsec-conf.yml  legacy.yml  main.yml  opportunistic-ipsec-conf.yml  opportunistic-ipsec.yml  pacemaker_facts.yml  resource-agent.yml  setup.yml  uninstall.yml
templates/: ipsec-node-to-node-private-or-clear.conf.j2  ipsec-node-to-node-private.conf.j2  ipsec-node-to-node-tunnels.conf.j2  ipsec-node-to-node-tunnels.secrets.j2  ipsec-opportunistic-private-or-clear.conf.j2  ipsec-opportunistic-private.conf.j2  ipsec-vip-tunnels.conf.j2  ipsec-vip-tunnels.secrets.j2  policy.j2
tests/: deploy-ipsec-tripleo.yml  test.yml
zuul.d/: layout.yaml  layout.yml
(+8 files in other folders)
