[metadata]
name = tripleo-ipsec
summary = Ansible role for managing TripleO's IPSEC tunnels
description-file =
    README.md
author = Juan Antonio Osorio Robles
author-email = jaosorior@redhat.com
home-page = https://github.com/JAORMX/tripleo-ipsec
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[pbr]
warnerrors = True

[wheel]
universal = 1
