[metadata]
name = tripleo-ipsec
summary = Ansible role for managing TripleO's IPSEC tunnels
description-file =
    README.rst
author = Juan Antonio Osorio Robles
author-email = jaosorior@redhat.com
home-page = https://git.openstack.org/cgit/openstack/tripleo-ipsec
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[files]
data_files =
    /usr/share/ansible/roles/tripleo-ipsec/defaults = defaults/*
    /usr/share/ansible/roles/tripleo-ipsec/files = files/*
    /usr/share/ansible/roles/tripleo-ipsec/handlers = handlers/*
    /usr/share/ansible/roles/tripleo-ipsec/meta = meta/*
    /usr/share/ansible/roles/tripleo-ipsec/tasks = tasks/*
    /usr/share/ansible/roles/tripleo-ipsec/templates = templates/*
    /usr/share/ansible/roles/tripleo-ipsec/tests = tests/*


[pbr]
warnerrors = True

[wheel]
universal = 1
